# avala

./: .gitignore  Dockerfile  README.md  batch_submitter.py  build-client.sh  build-server.sh  clean.sh  setup.py  stream_submitter.py
avala-client/: README.md  pyproject.toml
avala-client/avala/: api.py  config.py  database.py  decorator.py  exploit.py  main.py  models.py  schemas.py  utils.py
avala-client/avala/executor/: python.py  shell.py
avala-dashboards/: README.md  package-lock.json  package.json
avala-dashboards/public/: browserconfig.xml
avala-dashboards/src/components/: AnimatedNumber.vue  LineChart.vue  ValueChartCard.vue
avala-docs/: README.md
avala-server/: README.md  pyproject.toml
avala-server/avala/: attack_data.py  broadcast.py  config.py  main.py  models.py  scheduler.py  search.py  setup_tests.py  shared
avala-server/avala/auth/: basic.py
avala-server/avala/initialization/: __init__.py  init.py
avala-server/avala/initialization/files/: server.yaml  submitter.py
avala-server/avala/mq/: monitoring.py  rabbit.py  rabbit_async.py
avala-server/avala/routes/: attack_data.py  connect.py  flags.py  statistics.py
avala-server/avala/static/: index.html
avala-server/avala/workers/: persister.py  submitter.py
avala-shared/: README.md  pyproject.toml
avala-shared/avala_shared/: util.py
client/: api.py  config.py  executor.py  exploit.py  main.py  setup.py  test.py
client/avala/: __init__.py  api.py  config.py  database.py  decorator.py  exploit.py  main.py  models.py  storage.py  test.py  utils.py
client/avala/executor/: python.py  shell.py
client/executor/: python.py  shell.py
client/validation/: schemas.py
server/: MANIFEST.in  config.py  database.py  flag_ids.py  main.py  models.py  rabbitmq.py  scheduler.py  setup.py  state.py  submit.py  websocket.py
server/auth/: __init__.py  basic.py
server/avala/: attack_data.py  broadcast.py  cli.py  config.py  database.py  flag_ids.py  main.py  models.py  scheduler.py  schemas.py  search.py  setup_tests.py  state.py
server/avala/auth/: __init__.py  basic.py
server/avala/initialization/: __init__.py  compose.yaml  flag_ids.py  init.py  server.yaml  submitter.py
server/avala/initialization/files/: compose.yaml  flag_ids.py  server.yaml  submitter.py
server/avala/mq/: monitoring.py  rabbit.py  rabbit_async.py
server/avala/routes/: attack_data.py  connect.py  flag_ids.py  flags.py  statistics.py
server/avala/validation/: schemas.py
server/avala/workers/: persister.py  submitter.py
server/mq/: rabbit.py  rabbit_async.py
server/routes/: connect.py  flag_ids.py  flags.py  statistics.py
server/validation/: custom.py  schemas.py
server/workers/: persister.py  submitter.py
shared/: cli.py  logs.py  util.py  validation.py
web/: index.html
web/src/: App.vue
web/src/assets/: main.css
web/src/components/: ExploitCard.vue  LineChart.vue  TickProgress.vue  Timeline.vue  ValueCard.vue  ValueChartCard.vue
web/src/router/: index.js
web/src/views/: DashboardView.vue  FlagBrowserView.vue  ManualSubmissionView.vue
