[tool.poetry]
name = "avala-client"
version = "0.1.0"
description = "Avala client for writing and running exploits"
authors = ["Dušan Lazić <lazicdusan@protonmail.com>"]
readme = "README.md"
packages = [{include = "avala"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
sqlalchemy = "^2.0.36"
apscheduler = "^3.10.4"
addict = "^2.4.0"
pygments = "^2.18.0"
avala-shared = {path = "../avala-shared"}
pydantic = "^2.9.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
types-requests = "^2.32.0.20241016"
mypy = "^1.13.0"

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
lint.select = ["I"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = ["avala"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
