[tool.poetry]
name = "avala-server"
version = "0.1.0"
description = "Avala server for flag submission, flag ID fetching and client synchronization"
authors = ["Dušan Lazić <lazicdusan@protonmail.com>"]
readme = "README.md"
packages = [{include = "avala"}]
include = [
    "avala/static/*",
    "avala/initialization/files/flag_ids.py",
    "avala/initialization/files/submitter.py",
    "avala/initialization/files/compose.yaml",
    "avala/initialization/files/server.yaml",
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pyparsing = "^3.2.0"
fastapi = "^0.115.2"
uvicorn = "^0.32.0"
apscheduler = "^3.10.4"
pika = "^1.3.2"
aio-pika = "^9.4.3"
click = "^8.1.7"
broadcaster = "^0.3.1"
asyncpg = "^0.30.0"
uvloop = "^0.21.0"
httptools = "^0.6.4"
pydantic-settings = "^2.6.0"
avala-shared = {path = "../avala-shared"}

[tool.poetry.scripts]
avl = "avala.cli:cli"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"

[tool.ruff]
exclude = ["avala/initialization/files"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
